--- a/src/components/LandingSlide/style.css
+++ b/src/components/LandingSlide/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;500;700&display=swap");
 * {
   margin: 0;
   padding: 0;
