--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -48,23 +48,28 @@
   font-size: 2rem;
 }
 .home .wildLifeStats .statbox {
+  -ms-scroll-chaining: none;
+      overscroll-behavior: none;
+  height: 100vh;
+}
+.home .wildLifeStats .statbox .birddiv {
   width: 300%;
   display: flex;
-  height: 100vh;
+  height: 100%;
   -ms-scroll-chaining: none;
       overscroll-behavior: none;
   flex-wrap: nowrap;
-  overscroll-behavior: none;
 }
-.home .wildLifeStats .statbox .BirdStats {
+.home .wildLifeStats .statbox .birddiv .BirdStats {
   position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
+  min-height: 100vh;
 }
-.home .wildLifeStats .statbox .BirdStats .birdwrapper {
+.home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper {
   position: relative;
   margin-left: 5rem;
   border: 1px solid rgba(255, 255, 255, 0.253);
@@ -75,7 +80,7 @@
   max-width: 300px;
   margin: 2rem;
 }
-.home .wildLifeStats .statbox .BirdStats .birdwrapper h2 {
+.home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper h2 {
   position: absolute;
   font-size: 2rem;
   transform: rotate(-90deg);
@@ -83,17 +88,17 @@
   text-transform: uppercase;
   margin-left: -7rem;
 }
-.home .wildLifeStats .statbox .BirdStats .birdwrapper h4 {
+.home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper h4 {
   color: #426b00;
   font-size: 1.5rem;
 }
-.home .wildLifeStats .statbox .BirdStats .birdwrapper p {
+.home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper p {
   color: #cacaca;
   font-size: 0.8rem;
   text-align: left;
   font-weight: 200;
 }
-.home .wildLifeStats .statbox .BirdStats .birdwrapper button {
+.home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper button {
   padding: 0.5rem 1rem;
   border: none;
   width: -webkit-fit-content;
@@ -103,39 +108,39 @@
   background: #6a7e48;
   color: rgba(202, 202, 202, 0.712);
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(1) {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(1) {
   background: url("https://res.cloudinary.com/drsm0ncyx/image/upload/v1663412467/encyclopedia/backgrounds/bgBird_sarak9.jpg") no-repeat center/cover;
   background-color: rgba(0, 0, 0, 0.616);
   background-blend-mode: darken;
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(2) {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2) {
   background: url("https://res.cloudinary.com/drsm0ncyx/image/upload/v1663405212/encyclopedia/backgrounds/bgWildLife_qfqpuk.jpg") no-repeat center/cover;
   background-color: rgba(0, 0, 0, 0.616);
   background-blend-mode: darken;
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(2) .birdwrapper h2 {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2) .birdwrapper h2 {
   margin-left: -9rem;
   color: rgba(255, 255, 255, 0.774);
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(2) .birdwrapper h4 {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2) .birdwrapper h4 {
   color: rgba(255, 255, 255, 0.5490196078);
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(2) .birdwrapper button {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2) .birdwrapper button {
   background: #010507;
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(3) {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) {
   background: url("https://res.cloudinary.com/drsm0ncyx/image/upload/v1663412862/encyclopedia/backgrounds/bg6_zafhwx.jpg") no-repeat center/cover;
   background-color: rgba(0, 0, 0, 0.616);
   background-blend-mode: darken;
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(3) .birdwrapper h2 {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) .birdwrapper h2 {
   color: #1f6d86;
   margin-left: -9rem;
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(3) .birdwrapper h4 {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) .birdwrapper h4 {
   color: #597f9f;
 }
-.home .wildLifeStats .statbox .BirdStats:nth-child(3) .birdwrapper button {
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) .birdwrapper button {
   background: #08242f;
 }
 
@@ -149,7 +154,19 @@
   .home .wildLifeStats .WildLifeHeading .Letsview {
     font-size: 1rem;
   }
-  .home .wildLifeStats .BirdStats {
+  .home .wildLifeStats .statbox .birddiv .BirdStats,
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2),
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) {
     padding: 4rem 1rem;
+  }
+  .home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper,
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2) .birdwrapper,
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) .birdwrapper {
+    margin: 1rem;
+  }
+  .home .wildLifeStats .statbox .birddiv .BirdStats .birdwrapper h2,
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(2) .birdwrapper h2,
+.home .wildLifeStats .statbox .birddiv .BirdStats:nth-child(3) .birdwrapper h2 {
+    display: none;
   }
 }/*# sourceMappingURL=home.css.map */
