--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -168,6 +168,61 @@
         }
       }
     }
+
+    .typebx {
+      display: flex;
+      flex-wrap: wrap;
+      overscroll-behavior: none;
+      width: 100%;
+      min-height: 100vh;
+      gap: 2rem;
+      padding: 2rem;
+      background: #001929;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+
+      .card {
+        width: 300px;
+        height: 250px;
+        border-radius: 1rem;
+        overflow: hidden;
+        cursor: pointer;
+        transition: 0.3s ease-in-out;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .card:hover {
+        scale: 1.3;
+        transition: 0.3s ease-in-out;
+        z-index: 10;
+      }
+      .card::after {
+        content: "View Details";
+        font-size: 2rem;
+        position: absolute;
+        font-weight: 700;
+        top: 0;
+        left: 0;
+        width: 100%;
+        min-height: 100%;
+        background: rgba(0, 0, 0, 0.616);
+        color: rgba(255, 255, 255, 0.582);
+
+        display: none;
+        transition: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+      }
+      .card:hover::after {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+      }
+    }
   }
 }
 
