--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -175,53 +175,71 @@
       overscroll-behavior: none;
       width: 100%;
       min-height: 100vh;
-      gap: 2rem;
-      padding: 2rem;
+      gap: 3rem;
       background: #001929;
       justify-content: center;
       align-items: center;
       position: relative;
 
-      .card {
-        width: 300px;
-        height: 250px;
-        border-radius: 1rem;
-        overflow: hidden;
-        cursor: pointer;
-        transition: 0.3s ease-in-out;
+      .type {
+        display: flex;
+        gap: 1rem;
+        position: relative;
+        justify-content: center;
 
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+        .card {
+          width: 200px;
+          height: 150px;
+          border-radius: 0.3rem;
+          overflow: hidden;
+          transition: 0.3s ease-in-out;
+          position: relative;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+
+          .info {
+            position: absolute;
+            bottom: 0;
+            z-index: 10;
+            background: rgba(0, 0, 0, 0.445);
+            width: 100%;
+            height: 30%;
+            color: #ffffff8c;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
         }
       }
-      .card:hover {
-        scale: 1.3;
-        transition: 0.3s ease-in-out;
-        z-index: 10;
-      }
-      .card::after {
-        content: "View Details";
-        font-size: 2rem;
+      .type::before {
+        content: "Threatned";
         position: absolute;
-        font-weight: 700;
-        top: 0;
-        left: 0;
-        width: 100%;
-        min-height: 100%;
-        background: rgba(0, 0, 0, 0.616);
-        color: rgba(255, 255, 255, 0.582);
-
-        display: none;
-        transition: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-      }
-      .card:hover::after {
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+        font-size: 4rem;
+        top: 10%;
+        color: rgba(255, 255, 255, 0.568);
+        width: 100%;
+        z-index: 10;
       }
+    }
+
+    .morediv {
+      width: 100%;
+      min-height: 100vh;
+      background: rgb(255, 255, 255);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3rem;
+      color: rgb(0, 183, 255);
+      text-transform: uppercase;
+      font-weight: 700;
     }
   }
 }
