--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -205,7 +205,7 @@
             position: absolute;
             bottom: 0;
             z-index: 10;
-            background: rgba(0, 0, 0, 0.445);
+            background: rgba(0, 0, 0, 0.623);
             width: 100%;
             height: 30%;
             color: #ffffff8c;
@@ -216,7 +216,7 @@
         }
       }
       .type::before {
-        content: "Threatned";
+        content: "Critically Endangered";
         position: absolute;
         display: flex;
         justify-content: center;
@@ -226,6 +226,13 @@
         color: rgba(255, 255, 255, 0.568);
         width: 100%;
         z-index: 10;
+      }
+
+      .type:nth-child(2)::before {
+        content: "Threatned";
+      }
+      .type:nth-child(3)::before {
+        content: "Vulnerable";
       }
     }
 
