--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -206,17 +206,25 @@
 .home .wildLifeStats .typebx .type:nth-child(3)::before {
   content: "Vulnerable";
 }
-.home .wildLifeStats .morediv {
+.home .wildLifeStats .saveanimal {
   width: 100%;
-  min-height: 100vh;
-  background: rgb(255, 255, 255);
+  background: url("../assets/backgrounds/bg2.jpg") no-repeat center/cover;
+  height: 50vh;
+}
+.home .wildLifeStats .saveanimal .sectionheading {
+  background: rgb(235, 235, 235);
+  width: 100%;
   display: flex;
+  height: 100%;
   justify-content: center;
   align-items: center;
-  font-size: 3rem;
-  color: rgb(0, 183, 255);
-  text-transform: uppercase;
-  font-weight: 700;
+}
+.home .wildLifeStats .saveanimal .sectionheading h3 {
+  font-size: 5rem;
+  background: url("../assets/backgrounds/bg2.jpg") no-repeat center/cover;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  display: block;
 }
 
 @media screen and (max-width: 768px) {
