--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -236,17 +236,28 @@
       }
     }
 
-    .morediv {
+    .saveanimal {
       width: 100%;
-      min-height: 100vh;
-      background: rgb(255, 255, 255);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 3rem;
-      color: rgb(0, 183, 255);
-      text-transform: uppercase;
-      font-weight: 700;
+      background: url("../assets/backgrounds/bg2.jpg") no-repeat center/cover;
+      height: 50vh;
+
+      .sectionheading {
+        background: rgb(235, 235, 235);
+        width: 100%;
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+
+        h3 {
+          font-size: 5rem;
+          background: url("../assets/backgrounds/bg2.jpg") no-repeat
+            center/cover;
+          -webkit-text-fill-color: transparent;
+          -webkit-background-clip: text;
+          display: block;
+        }
+      }
     }
   }
 }
