--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -121,15 +121,15 @@
         }
 
         .BirdStats:nth-child(1) {
-          background: url("https://res.cloudinary.com/drsm0ncyx/image/upload/v1663412467/encyclopedia/backgrounds/bgBird_sarak9.jpg")
-            no-repeat center/cover;
+          background: url("../assets/backgrounds/bgBird.jpg") no-repeat
+            center/cover;
           background-color: rgba(0, 0, 0, 0.616);
 
           background-blend-mode: darken;
         }
         .BirdStats:nth-child(2) {
-          background: url("https://res.cloudinary.com/drsm0ncyx/image/upload/v1663405212/encyclopedia/backgrounds/bgWildLife_qfqpuk.jpg")
-            no-repeat center/cover;
+          background: url("../assets/backgrounds/bgWildLife.jpg") no-repeat
+            center/cover;
           background-color: rgba(0, 0, 0, 0.616);
 
           background-blend-mode: darken;
@@ -148,8 +148,8 @@
           }
         }
         .BirdStats:nth-child(3) {
-          background: url("https://res.cloudinary.com/drsm0ncyx/image/upload/v1663412862/encyclopedia/backgrounds/bg6_zafhwx.jpg")
-            no-repeat center/cover;
+          background: url("../assets/backgrounds/bg6.jpg") no-repeat
+            center/cover;
           background-color: rgba(0, 0, 0, 0.616);
           background-blend-mode: darken;
 
@@ -254,6 +254,7 @@
           background: url("../assets/backgrounds/bg2.jpg") no-repeat
             center/cover;
           -webkit-text-fill-color: transparent;
+          background-clip: text;
           -webkit-background-clip: text;
           display: block;
         }
