--- a/src/components/LandingSlide/style.css
+++ b/src/components/LandingSlide/style.css
@@ -47,7 +47,7 @@
   opacity: 0.4;
 }
 .slider .slideinfo ::before {
-  content: "THE";
+  content: "IN THE";
   position: absolute;
   color: #fff;
   font-size: 2rem;
@@ -108,6 +108,10 @@
   color: rgb(0, 0, 0);
   border-radius: 3px;
   cursor: pointer;
+}
+.slider .slidestats button a {
+  text-decoration: none;
+  color: black;
 }
 
 /* slider customise */
